code25_all/scala/4187122.txt
Map
Set
error: type mismatch; 
[INFO]  found   : scala.collection.Set[String]
[INFO]  required: Set[String]

scala> case class Calculator[+T](name: String, parameters: Set[String])
defined class Calculator

scala> val binding=Map.empty[String, String]
binding: scala.collection.immutable.Map[String,String] = Map()

scala> Calculator("Hello",binding.keySet)
<console>:9: error: type mismatch;
found   : scala.collection.Set[String]
required: Set[String]
       Calculator("Hello",binding.keySet)
                                  ^

